<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lzx.cardweather.ScrollingActivity">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change_order"
        android:orderInCategory="100"
        android:title="@string/action_change_order"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_conpare"
        android:orderInCategory="100"
        android:title="@string/action_conpare"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_setting"
        app:showAsAction="never" />
</menu>
